--- a/app/hero-detail.component.html
+++ b/app/hero-detail.component.html
@@ -6,5 +6,5 @@
         <input [(ngModel)]="hero.name" placeholder="name">
     </div>
     <button (click)="goBack()">Back</button>
-    <button (clidk)="save()">Save</button>
+    <button (click)="save()">Save</button>
 </div>
