--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,12 @@ button:disabled {
     cursor: auto;
 }
 
+button.delete-button{
+    float:right;
+    background-color: gray !important;
+    color:white;
+}
+
 /* Navigation link styles */
 nav a {
     padding: 5px 10px;
@@ -135,6 +141,8 @@ nav a.active {
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
 }
+
+.error {color:red;}
 
 /* everywhere else */
 * {
